Fix entry point and folder naming for Vercel

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "name": "bulk-mailer",
     "version": "1.0.0",
-    "main": "server.js",
+    "scripts": {
+        "build": "echo 'No build needed'"
+    },
     "dependencies": {
         "cors": "^2.8.6",
         "dotenv": "^17.3.1",
